# django-solr-dsl

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: main.yml
django_solr/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
django_solr/django_solr/templates/: index_list.html
django_solr/dsl/: backend.py  exception.py  fields.py  indexes.py
django_solr/migrations/: 0001_initial.py
django_solr/templates/admin/: change_list.html
django_solr/templates/admin/django_solr/indexes/: change_list.html
django_solr/templates/django_solr/: index_list.html
linter-action/: Dockerfile  action.yml  entrypoint.sh
